[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/Editor/Menu.gd" type="Script" id=1]
[ext_resource path="res://src/Editor/Tabs.gd" type="Script" id=2]
[ext_resource path="res://src/Editor/CameraControl.gd" type="Script" id=3]
[ext_resource path="res://src/AreaDisplay/AreaDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Editor/ZoomSlider.gd" type="Script" id=5]
[ext_resource path="res://src/Tools/Tools.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Editor/Selection.gd" type="Script" id=7]
[ext_resource path="res://src/Editor/NewTiles.gd" type="Script" id=8]
[ext_resource path="res://src/Editor/StatusBar.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.101961, 0.101961, 0.101961, 0.501961 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.101961, 0.101961, 0.101961, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.101961, 0.101961, 0.101961, 0.117647 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.101961, 0.101961, 0.101961, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.101961, 0.101961, 0.101961, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0.156863 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxLine" id=6]
thickness = 2

[sub_resource type="StyleBoxLine" id=7]
color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 1
border_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 0.75 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 0.74902 )

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 0.9 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=14]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0 )
border_width_bottom = 3
border_color = Color( 0.101961, 0.101961, 0.101961, 1 )
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0.25 )

[sub_resource type="StyleBoxFlat" id=17]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 0.75 )
border_width_top = 20
border_color = Color( 1, 1, 1, 0.6 )
expand_margin_top = 20.0

[sub_resource type="Theme" id=18]
Button/colors/font_color = Color( 0.101961, 0.101961, 0.101961, 1 )
Button/colors/font_color_disabled = Color( 0.101961, 0.101961, 0.101961, 0.2 )
Button/colors/font_color_hover = Color( 0.101961, 0.101961, 0.101961, 1 )
Button/colors/font_color_pressed = Color( 0.101961, 0.101961, 0.101961, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
HSlider/icons/grabber = null
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = null
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource( 6 )
HSlider/styles/slider = SubResource( 7 )
Label/colors/font_color = Color( 0.101961, 0.101961, 0.101961, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 0.101961, 0.101961, 0.101961, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0, 0, 0, 0.501961 )
LineEdit/colors/selection_color = Color( 1, 1, 1, 0.4 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 8 )
LineEdit/styles/normal = SubResource( 9 )
LineEdit/styles/read_only = null
MenuButton/colors/font_color = Color( 0.101961, 0.101961, 0.101961, 1 )
MenuButton/colors/font_color_disabled = Color( 0.101961, 0.101961, 0.101961, 0.301961 )
MenuButton/colors/font_color_hover = Color( 0.101961, 0.101961, 0.101961, 1 )
MenuButton/colors/font_color_pressed = Color( 0.101961, 0.101961, 0.101961, 1 )
MenuButton/constants/hseparation = 3
MenuButton/fonts/font = null
MenuButton/styles/disabled = SubResource( 1 )
MenuButton/styles/focus = SubResource( 2 )
MenuButton/styles/hover = SubResource( 3 )
MenuButton/styles/normal = SubResource( 4 )
MenuButton/styles/pressed = SubResource( 5 )
Panel/styles/panel = SubResource( 10 )
PanelContainer/styles/panel = SubResource( 10 )
PopupMenu/colors/font_color = Color( 0, 0, 0, 0.75 )
PopupMenu/colors/font_color_accel = Color( 0, 0, 0, 0.803922 )
PopupMenu/colors/font_color_disabled = Color( 0, 0, 0, 0.501961 )
PopupMenu/colors/font_color_hover = Color( 0, 0, 0, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 11 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 12 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
Tabs/colors/font_color_bg = Color( 0.101961, 0.101961, 0.101961, 0.501961 )
Tabs/colors/font_color_disabled = Color( 0.101961, 0.101961, 0.101961, 0.2 )
Tabs/colors/font_color_fg = Color( 0.101961, 0.101961, 0.101961, 1 )
Tabs/constants/hseparation = 4
Tabs/constants/label_valign_bg = 2
Tabs/constants/label_valign_fg = 0
Tabs/constants/top_margin = 24
Tabs/fonts/font = null
Tabs/icons/close = null
Tabs/icons/decrement = null
Tabs/icons/decrement_highlight = null
Tabs/icons/increment = null
Tabs/icons/increment_highlight = null
Tabs/styles/button = null
Tabs/styles/button_pressed = null
Tabs/styles/panel = null
Tabs/styles/tab_bg = SubResource( 13 )
Tabs/styles/tab_disabled = SubResource( 14 )
Tabs/styles/tab_fg = SubResource( 15 )
TooltipLabel/colors/font_color = Color( 0.101961, 0.101961, 0.101961, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
TooltipLabel/constants/shadow_offset_x = 0
TooltipLabel/constants/shadow_offset_y = 0
TooltipLabel/fonts/font = null
Tree/colors/cursor_color = Color( 0, 0, 0, 1 )
Tree/colors/custom_button_font_highlight = Color( 0.94, 0.94, 0.94, 1 )
Tree/colors/drop_position_color = Color( 1, 0.3, 0.2, 1 )
Tree/colors/font_color = Color( 0, 0, 0, 1 )
Tree/colors/font_color_selected = Color( 0, 0, 0, 1 )
Tree/colors/guide_color = Color( 0, 0, 0, 0.101961 )
Tree/colors/relationship_line_color = Color( 0.27, 0.27, 0.27, 1 )
Tree/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
Tree/colors/title_button_color = Color( 0.88, 0.88, 0.88, 1 )
Tree/constants/button_margin = 4
Tree/constants/draw_guides = 1
Tree/constants/draw_relationship_lines = 0
Tree/constants/hseparation = 4
Tree/constants/item_margin = 12
Tree/constants/scroll_border = 4
Tree/constants/scroll_speed = 12
Tree/constants/vseparation = 4
Tree/fonts/font = null
Tree/fonts/title_button_font = null
Tree/icons/arrow = null
Tree/icons/arrow_collapsed = null
Tree/icons/checked = null
Tree/icons/select_arrow = null
Tree/icons/unchecked = null
Tree/icons/updown = null
Tree/styles/bg = SubResource( 16 )
Tree/styles/bg_focus = SubResource( 16 )
Tree/styles/button_pressed = null
Tree/styles/cursor = null
Tree/styles/cursor_unfocused = null
Tree/styles/custom_button = null
Tree/styles/custom_button_hover = null
Tree/styles/custom_button_pressed = null
Tree/styles/selected = null
Tree/styles/selected_focus = null
Tree/styles/title_button_hover = null
Tree/styles/title_button_normal = null
Tree/styles/title_button_pressed = null
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 17 )

[node name="Editor" type="Node2D"]

[node name="AreaDisplay" parent="." instance=ExtResource( 4 )]

[node name="Selection" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 7 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Wrapper" type="VBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.902527
margin_right = -0.902588
mouse_filter = 2
theme = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titlebar" type="PanelContainer" parent="UI/Wrapper"]
margin_right = 1365.0
margin_bottom = 44.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="UI/Wrapper/Titlebar"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1355.0
margin_bottom = 34.0

[node name="Menu" type="MenuButton" parent="UI/Wrapper/Titlebar/Container"]
margin_right = 71.0
margin_bottom = 24.0
focus_mode = 2
text = "Options"
flat = false
script = ExtResource( 1 )

[node name="Save" type="Button" parent="UI/Wrapper/Titlebar/Container"]
margin_left = 75.0
margin_right = 124.0
margin_bottom = 24.0
text = "Save"

[node name="Space" type="Control" parent="UI/Wrapper/Titlebar/Container"]
margin_left = 128.0
margin_right = 138.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 0 )

[node name="Tabs" type="Tabs" parent="UI/Wrapper/Titlebar/Container"]
margin_left = 142.0
margin_right = 1178.0
margin_bottom = 24.0
focus_mode = 2
size_flags_horizontal = 3
tab_align = 0
script = ExtResource( 2 )

[node name="Tools" parent="UI/Wrapper/Titlebar/Container" instance=ExtResource( 6 )]

[node name="Menus" type="VBoxContainer" parent="UI/Wrapper"]
margin_top = 48.0
margin_right = 211.0
margin_bottom = 580.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedTiles" type="PanelContainer" parent="UI/Wrapper/Menus"]
margin_right = 211.0
margin_bottom = 186.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrapper" type="VBoxContainer" parent="UI/Wrapper/Menus/SelectedTiles"]
margin_left = 10.0
margin_top = 10.0
margin_right = 201.0
margin_bottom = 176.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper"]
margin_right = 191.0
margin_bottom = 14.0
text = "Selected tile"
align = 1

[node name="Tile" type="GridContainer" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper"]
margin_top = 29.0
margin_right = 191.0
margin_bottom = 117.0
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileLabel" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_right = 117.0
margin_bottom = 14.0
text = "Tile"

[node name="Tile" type="LineEdit" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_left = 127.0
margin_right = 191.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "grass"
caret_blink = true

[node name="TileVariantLabel" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_top = 19.0
margin_right = 117.0
margin_bottom = 33.0
text = "Tile variant"

[node name="TileVariant" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_left = 127.0
margin_top = 19.0
margin_right = 191.0
margin_bottom = 33.0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecorationLabel" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_top = 37.0
margin_right = 117.0
margin_bottom = 51.0
text = "Decoration variant"

[node name="Decoration" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_left = 127.0
margin_top = 37.0
margin_right = 191.0
margin_bottom = 51.0
text = "1"

[node name="ObjectVariantLabel" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_top = 55.0
margin_right = 117.0
margin_bottom = 69.0
text = "Object variant"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecorationLabel3" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_left = 127.0
margin_top = 55.0
margin_right = 191.0
margin_bottom = 69.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightLabel" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_top = 73.0
margin_right = 117.0
margin_bottom = 87.0
text = "Height"

[node name="Height" type="SpinBox" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Tile"]
margin_left = 127.0
margin_top = 73.0
margin_right = 191.0
margin_bottom = 88.0
size_flags_horizontal = 3
min_value = -100.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="Object" type="GridContainer" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper"]
margin_top = 132.0
margin_right = 191.0
margin_bottom = 166.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectLabel" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Object"]
margin_right = 53.0
margin_bottom = 14.0
text = "Object"

[node name="Object" type="LineEdit" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Object"]
margin_left = 57.0
margin_right = 191.0
margin_bottom = 15.0
size_flags_horizontal = 3
caret_blink = true

[node name="SpawnerLabel" type="Label" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Object"]
margin_top = 19.0
margin_right = 53.0
margin_bottom = 33.0
text = "Spawner"

[node name="Spawner" type="LineEdit" parent="UI/Wrapper/Menus/SelectedTiles/Wrapper/Object"]
margin_left = 57.0
margin_top = 19.0
margin_right = 191.0
margin_bottom = 34.0
size_flags_horizontal = 3
caret_blink = true

[node name="NewTiles" type="PanelContainer" parent="UI/Wrapper/Menus"]
margin_top = 190.0
margin_right = 211.0
margin_bottom = 340.0
grow_horizontal = 0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrapper" type="VBoxContainer" parent="UI/Wrapper/Menus/NewTiles"]
margin_left = 10.0
margin_top = 10.0
margin_right = 201.0
margin_bottom = 140.0
mouse_filter = 2
custom_constants/separation = 15

[node name="Label" type="Label" parent="UI/Wrapper/Menus/NewTiles/Wrapper"]
margin_right = 191.0
margin_bottom = 14.0
text = "New tiles"
align = 1

[node name="Tile" type="GridContainer" parent="UI/Wrapper/Menus/NewTiles/Wrapper"]
margin_top = 29.0
margin_right = 191.0
margin_bottom = 81.0
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewLabel" type="Label" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Tile"]
margin_right = 50.0
margin_bottom = 14.0
text = "Preview"

[node name="Preview" type="TextureRect" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Tile"]
margin_left = 60.0
margin_right = 191.0
margin_bottom = 14.0
stretch_mode = 6

[node name="TileLabel2" type="Label" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Tile"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0
text = "Tile"

[node name="Tile" type="LineEdit" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Tile"]
margin_left = 60.0
margin_top = 18.0
margin_right = 191.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "grass"
caret_blink = true

[node name="HeightLabel" type="Label" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Tile"]
margin_top = 37.0
margin_right = 50.0
margin_bottom = 51.0
text = "Height"

[node name="Height" type="SpinBox" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Tile"]
margin_left = 60.0
margin_top = 37.0
margin_right = 191.0
margin_bottom = 52.0
size_flags_horizontal = 3
min_value = -100.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="Object" type="GridContainer" parent="UI/Wrapper/Menus/NewTiles/Wrapper"]
margin_top = 96.0
margin_right = 191.0
margin_bottom = 130.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectLabel" type="Label" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Object"]
margin_right = 53.0
margin_bottom = 14.0
text = "Object"

[node name="Object" type="LineEdit" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Object"]
margin_left = 57.0
margin_right = 191.0
margin_bottom = 15.0
size_flags_horizontal = 3
caret_blink = true

[node name="SpawnerLabel" type="Label" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Object"]
margin_top = 19.0
margin_right = 53.0
margin_bottom = 33.0
text = "Spawner"

[node name="Spawner" type="LineEdit" parent="UI/Wrapper/Menus/NewTiles/Wrapper/Object"]
margin_left = 57.0
margin_top = 19.0
margin_right = 191.0
margin_bottom = 34.0
size_flags_horizontal = 3
caret_blink = true

[node name="Pack" type="PanelContainer" parent="UI/Wrapper/Menus"]
margin_top = 344.0
margin_right = 211.0
margin_bottom = 532.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrapper" type="VBoxContainer" parent="UI/Wrapper/Menus/Pack"]
margin_left = 10.0
margin_top = 10.0
margin_right = 201.0
margin_bottom = 178.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="UI/Wrapper/Menus/Pack/Wrapper"]
margin_right = 191.0
margin_bottom = 14.0
text = "Available tiles"
align = 1

[node name="Packs" type="Button" parent="UI/Wrapper/Menus/Pack/Wrapper"]
margin_top = 29.0
margin_right = 106.0
margin_bottom = 53.0
size_flags_horizontal = 0
text = "Change packs"

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Wrapper/Menus/Pack/Wrapper"]
margin_top = 68.0
margin_right = 191.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 100 )
scroll_horizontal_enabled = false

[node name="Tile" type="GridContainer" parent="UI/Wrapper/Menus/Pack/Wrapper/ScrollContainer"]
custom_constants/hseparation = 10
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grass" type="TextureButton" parent="UI/Wrapper/Menus/Pack/Wrapper/ScrollContainer/Tile"]
hint_tooltip = "grass"
stretch_mode = 6

[node name="Status bar" type="PanelContainer" parent="UI/Wrapper"]
margin_top = 756.0
margin_right = 1365.0
margin_bottom = 800.0
size_flags_vertical = 10

[node name="Wrapper" type="HBoxContainer" parent="UI/Wrapper/Status bar"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1355.0
margin_bottom = 34.0
custom_constants/separation = 20
script = ExtResource( 9 )

[node name="PaintPosition" type="Label" parent="UI/Wrapper/Status bar/Wrapper"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
text = "(0, 0)"

[node name="Warnings" type="Button" parent="UI/Wrapper/Status bar/Wrapper"]
margin_left = 979.0
margin_right = 1067.0
margin_bottom = 24.0
size_flags_horizontal = 10
text = "0 warnings"

[node name="CameraLabel" type="Label" parent="UI/Wrapper/Status bar/Wrapper"]
margin_left = 1087.0
margin_top = 5.0
margin_right = 1128.0
margin_bottom = 19.0
text = "Zoom:"

[node name="ZoomSlider" type="HSlider" parent="UI/Wrapper/Status bar/Wrapper"]
margin_left = 1148.0
margin_right = 1248.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 8
size_flags_vertical = 5
min_value = 0.5
max_value = 5.0
step = 0.2
value = 1.0
script = ExtResource( 5 )

[node name="Recentre" type="Button" parent="UI/Wrapper/Status bar/Wrapper"]
margin_left = 1268.0
margin_right = 1345.0
margin_bottom = 24.0
text = "Recentre"

[node name="FileDialog" type="FileDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 450 )
focus_mode = 2
theme = SubResource( 18 )
window_title = "Open File(s)"
resizable = true
mode = 1
access = 2
filters = PoolStringArray( "*.json ; Samerion maps" )
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningDialog" type="AcceptDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 0 )
theme = SubResource( 18 )
window_title = "Warnings"
resizable = true
dialog_autowrap = true

[node name="CameraControl" type="Node2D" parent="."]
position = Vector2( 682, 400 )
script = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="CameraControl"]
current = true
[connection signal="value_changed" from="UI/Wrapper/Status bar/Wrapper/ZoomSlider" to="CameraControl" method="set_zoom"]
[connection signal="pressed" from="UI/Wrapper/Status bar/Wrapper/Recentre" to="CameraControl" method="recentre"]
[connection signal="zoom_changed" from="CameraControl" to="UI/Wrapper/Status bar/Wrapper/ZoomSlider" method="set_value"]
